--- a/styles/index.scss
+++ b/styles/index.scss
@@ -529,6 +529,7 @@ h1 {
 }
 
 .banner {
+    position: relative;
     padding-top: 150px;
     padding-bottom: 300px;
     @media(max-width: 812px) {
@@ -665,4 +666,105 @@ h1 {
             }
         }
     }
+}
+
+#contact-form {
+    position: absolute;
+    display: none;
+    justify-content: center;
+    align-items: center;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    overflow: hidden;
+    background: #08080A;
+    width: 100%;
+    z-index: 99;
+    svg {
+        position: absolute;
+        right: 10px;
+        top: 10px;
+        cursor: pointer;
+    }
+    div {
+        max-width: 440px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        h3 {
+            font-family: 'Clash Display';
+            font-weight: 600;
+            font-size: 40px;
+            line-height: 49px;
+            text-align: center;
+            letter-spacing: 0.03em;
+            text-transform: uppercase;
+            color: #ACE231;
+            margin-bottom: 34px;
+        }
+        label {
+            font-family: 'Clash Display';
+            font-weight: 600;
+            font-size: 16px;
+            line-height: 20px;
+            text-align: left;
+            letter-spacing: 0.01em;
+            color: #FFFFFF;
+            padding: 28px 0 8px;
+        }
+        input {
+            border: none;
+            border-bottom: 2.5px solid #ACE231;
+            height: 40px;
+            display: flex;
+            align-items: center;
+            padding: 22px 0;
+            background: transparent;
+            color: #FFFFFF;
+            font-size: 18px;
+        }
+        input:focus, textarea:focus {
+            outline: none;
+        }
+        #necessary {
+            margin-top: -20px;
+            color: #838384;
+            font-family: 'Clash Display';
+            font-weight: 600;
+            font-size: 14px;
+            line-height: 17px;
+            letter-spacing: 0.01em;
+        }
+        textarea {
+            display: flex;
+            align-items: center;
+            padding: 8px 0;
+            background: transparent;
+            height: 80px;
+            border: none;
+            border-bottom: 2.5px solid #ACE231;
+            resize: none;
+            color: #FFFFFF;
+            font-size: 18px;
+        }
+        input[type=submit] {
+            background: #ACE231;
+            height: 54px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-family: 'Clash Display';
+            font-weight: 600;
+            font-size: 18px;
+            line-height: 22px;
+            text-align: center;
+            text-transform: uppercase;
+            color: #08080A;
+            margin-top: 30px;
+        }
+    }
+}
+
+.d-flex {
+    display: flex !important;
 }
