--- a/styles/index.scss
+++ b/styles/index.scss
@@ -34,8 +34,8 @@ h1, h2, h3, h4, h5, h6 {
     @media(max-width: 992px) {
         padding: 0 5%;
     }
-    @media(max-width: 390px) {
-        padding: 0 45px;
+    @media(max-width: 375px) {
+        padding: 0 5%;
     }
 }
 .logo-wrapper {
@@ -691,6 +691,9 @@ h1 {
         width: 100%;
         display: flex;
         flex-direction: column;
+        @media(max-width: 480px) {
+            max-width: 320px;
+        }
         h3 {
             font-family: 'Clash Display';
             font-weight: 600;
@@ -701,6 +704,11 @@ h1 {
             text-transform: uppercase;
             color: #ACE231;
             margin-bottom: 34px;
+            @media(max-width: 480px) {
+                font-size: 28px;
+                line-height: 34px;
+                margin-bottom: 16px;
+            }
         }
         label {
             font-family: 'Clash Display';
@@ -711,6 +719,10 @@ h1 {
             letter-spacing: 0.01em;
             color: #FFFFFF;
             padding: 28px 0 8px;
+            @media(max-width: 480px) {
+                font-size: 14px;
+                line-height: 17px;
+            }
         }
         input {
             border: none;
@@ -722,6 +734,9 @@ h1 {
             background: transparent;
             color: #FFFFFF;
             font-size: 18px;
+            @media(max-width: 480px) {
+                font-size: 15px;
+            }
         }
         input:focus, textarea:focus {
             outline: none;
@@ -746,6 +761,9 @@ h1 {
             resize: none;
             color: #FFFFFF;
             font-size: 18px;
+            @media(max-width: 480px) {
+                font-size: 15px;
+            }
         }
         input[type=submit] {
             background: #ACE231;
@@ -761,10 +779,172 @@ h1 {
             text-transform: uppercase;
             color: #08080A;
             margin-top: 30px;
+            @media(max-width: 480px) {
+                height: 48px;
+                margin-top: 32px;
+            }
         }
     }
 }
 
 .d-flex {
     display: flex !important;
+}
+
+
+
+.h1-title {
+    font-family: 'Clash Display';
+    font-weight: 600;
+    font-size: 106.544px;
+    line-height: 131px;
+    text-align: left;
+    letter-spacing: 0.03em;
+    color: #ACE231;
+    @media(max-width: 480px) {
+        font-size: 50px;
+        line-height: 62px;
+    }
+}
+
+.main-services {
+    padding: 150px 0;
+    @media(max-width: 990px) {
+        padding: 120px 0;
+    }
+    @media(max-width: 480px) {
+        padding: 75px 0;
+    }
+    .services-wrapper {
+        position: relative;
+        .subtitle {
+            font-size: 18px;
+            line-height: 150%;
+            letter-spacing: 0.05em;
+            color: #FFFFFF;
+            max-width: 625px;
+            font-weight: 400;
+            padding-top: 20px;
+            margin: auto;
+            font-family: 'Work Sans';
+            @media(max-width: 480px) {
+                font-size: 16px;
+            }
+        }
+        .img-wrapper {
+            position: absolute;
+            top: -60px;
+            right: 0;
+            z-index: -1;
+            @media(max-width: 480px) {
+                top: -25px;
+                right: 40px;
+            }
+            @media(max-width: 362px) {
+                right: 20px;
+            }
+            img {
+                max-width: 385px;
+                width: 100%;
+                height: auto;
+                @media(max-width: 990px) {
+                    max-width: 300px;
+                }
+                @media(max-width: 480px) {
+                    max-width: 160px;
+                }
+            }
+        }
+    }
+}
+
+.strategy {
+    padding: 150px 0;
+    @media(max-width: 990px) {
+        padding: 120px 0;
+    }
+    @media(max-width: 480px) {
+        padding: 75px 0;
+    }
+    .wrapper {
+        .item {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 200px;
+            @media(max-width: 990px) {
+                margin-bottom: 120px;
+            }
+            @media(max-width: 480px) {
+                margin-bottom: 100px;
+            }
+            .content {
+                display: flex;
+                flex-direction: column;
+                .title {
+                    font-weight: 600;
+                    font-size: 20px;
+                    line-height: 150%;
+                    letter-spacing: 0.05em;
+                    text-transform: uppercase;
+                    color: #ACE231;
+                    margin: 40px 0 17px;
+                    font-family: 'Work Sans';
+                    @media(max-width: 480px) {
+                        font-weight: 700;
+                        font-size: 18px;
+                        margin: 30px 0 20px;
+                    }
+                }
+                .text {
+                    font-weight: 400;
+                    font-size: 18px;
+                    line-height: 150%;
+                    letter-spacing: 0.05em;
+                    font-family: 'Work Sans';
+                    color: #FFFFFF;
+                    @media(max-width: 480px) {
+                        font-size: 16px;
+                    }
+                }
+            }
+            .img-wrapper {
+                img {
+                }
+            }
+        }
+        .item:last-child {
+            margin-bottom: 0;
+        }
+        .item:nth-child(odd) {
+            @media(max-width: 812px) {
+                flex-direction: column-reverse;
+            }
+            .img-wrapper {
+                margin-left: 80px;
+                @media(max-width: 812px) {
+                    margin-bottom: 80px;
+                    margin-left: 0;
+                }
+                @media(max-width: 480px) {
+                    margin-bottom: 30px;
+                }
+            }
+        }
+        .item:nth-child(even) {
+            @media(max-width: 812px) {
+                flex-direction: column;
+            }
+            .img-wrapper {
+                margin-right: 80px;
+                @media(max-width: 812px) {
+                    margin-bottom: 80px;
+                    margin-right: 0;
+                }
+                @media(max-width: 480px) {
+                    margin-bottom: 30px;
+                }
+            }
+        }
+    }
 }
