--- a/styles/index.scss
+++ b/styles/index.scss
@@ -669,7 +669,7 @@ h1 {
 }
 
 #contact-form {
-    position: absolute;
+    position: fixed;
     display: none;
     justify-content: center;
     align-items: center;
