--- a/styles/index.scss
+++ b/styles/index.scss
@@ -802,6 +802,13 @@ h1 {
     letter-spacing: 0.03em;
     color: #ACE231;
     text-transform: uppercase;
+    span {
+        color: #FFFFFF;
+    }
+    @media(max-width: 812px) {
+        font-size: 90px;
+        line-height: 120%;
+    }
     @media(max-width: 480px) {
         font-size: 50px;
         line-height: 62px;
@@ -1149,5 +1156,280 @@ h1 {
                 margin-bottom: 0;
             }
         }
+    }
+}
+
+.about {
+    padding: 150px 0;
+    @media(max-width: 990px) {
+        padding: 120px 0;
+    }
+    @media(max-width: 480px) {
+        padding: 50px 0;
+    }
+    .wrapper {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: relative;
+        @media(max-width: 480px) {
+            justify-content: flex-end;
+        }
+        .h1-title {
+            @media(max-width: 480px) {
+                text-align: right;
+                max-width: 300px;
+            }
+        }
+        .img-wrapper {
+            position: absolute;
+            right: 0;
+            top: -30px;
+            z-index: -1;
+            @media(max-width: 480px) {
+                top: -45px; 
+            }
+            img {
+                @media(max-width: 992px) {
+                    max-width: 320px;
+                    width: 100%;
+                    height: auto;
+                }
+                @media(max-width: 770px) {
+                    max-width: 240px;
+                    width: 100%;
+                    height: auto;
+                }
+                @media(max-width: 480px) {
+                    max-width: 160px;
+                    width: 100%;
+                    height: auto;
+                }
+            }
+        }
+        .img-wrapper-arrow {
+            margin-right: 30px;
+            @media(max-width: 992px) {
+                max-width: 400px;
+                width: 100%;
+                height: auto;
+            }
+            @media(max-width: 480px) {
+                position: absolute;
+                top: 30%;
+                transform: translateY(-50%);
+                left: -30px;
+                max-width: 200px; 
+            }
+            img {
+                @media(max-width: 992px) {
+                    width: 100%;
+                    height: auto;
+                }
+            }
+        }
+    }
+    .subtext-wrapper {
+        display: flex;
+        justify-content: start;
+        @media(max-width: 480px) {
+            flex-direction: column;
+        }
+        .text {
+            font-family: 'Work Sans';
+            font-size: 18px;
+            line-height: 150%;
+            letter-spacing: 0.05em;
+            color: #FFFFFF;
+            @media(max-width: 770px) {
+                font-size: 16px;
+            }
+        }
+        .text:first-child {
+            margin-right: 40px;
+            max-width: 360px;
+            @media(max-width: 480px) {
+                max-width: 100%;
+                margin-bottom: 20px;
+                margin-top: 36px;
+            }
+        }
+        .text:last-child {
+            max-width: 620px;
+            @media(max-width: 480px) {
+                max-width: 100%;
+            }
+        }
+    }
+}
+
+.team {
+    padding: 150px 0;
+    @media(max-width: 990px) {
+        padding: 120px 0;
+    }
+    @media(max-width: 480px) {
+        padding: 50px 0 75px;
+    }
+    .wrapper {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+        margin-top: 40px;
+        @media(max-width: 480px) {
+            justify-content: center;
+            margin-top: 35px;
+        }
+        .item {
+            position: relative;
+            min-height: 455px;
+            max-width: 360px;
+            width: 100%;
+            margin-right: 40px;
+            margin-top: 40px;
+            @media(max-width: 812px) {
+                max-width: 300px;
+                min-height: 400px;
+            }
+            @media(max-width: 480px) {
+                margin-top: 20px;
+            }
+            .card {
+                background: #08080A;
+                border: 2px solid #ACE231;
+                width: 300px;
+                height: 396px;
+                position: absolute;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                padding: 20px 30px;
+                @media(max-width: 812px) {
+                    width: 240px;
+                    height: 330px;
+                    padding: 20px;
+                }
+                .name {
+                    margin-top: 15px;
+                    font-weight: 600;
+                    font-size: 18px;
+                    line-height: 22px;
+                    letter-spacing: 0.03em;
+                    text-transform: uppercase;
+                    text-align: center;
+                    color: #ACE231;
+                }
+                .pos {
+                    font-family: 'Work Sans';
+                    font-weight: 600;
+                    font-size: 12px;
+                    line-height: 14px;
+                    letter-spacing: 0.03em;
+                    text-transform: uppercase;
+                    color: #FFFFFF;
+                    text-align: center;
+                }
+                img {
+                    @media(max-width: 812px) {
+                        max-width: 200px;
+                        max-height: 200px;
+                    }
+                }
+            }
+            .card:nth-child(1) {
+                z-index: 3;
+            }
+            .card:nth-child(2) {
+                z-index: 4;
+                transform: translate(20px, 20px);
+            }
+            .card:nth-child(3) {
+                z-index: 5;
+                transform: translate(40px, 40px);
+            }
+            .card:nth-child(4) {
+                z-index: 6;
+                transform: translate(60px, 60px);
+            }
+        }
+        .item:nth-child(3n) {
+            margin-right: 0;
+            @media(max-width: 1190px) {
+                margin-right: 40px;
+            }
+        }
+        .item-reversed {
+            margin-top: 40px;
+            // @media(max-width: 1190px) {
+            //     margin-top: 0;
+            // }
+            .card:nth-child(1) {
+                z-index: 6;
+            }
+            .card:nth-child(2) {
+                z-index: 5;
+                transform: translate(20px, 20px);
+            }
+            .card:nth-child(3) {
+                z-index: 4;
+                transform: translate(40px, 40px);
+            }
+            .card:nth-child(4) {
+                z-index: 3;
+                transform: translate(60px, 60px);
+            }
+        }
+        .item:nth-child(2n) {
+            @media(max-width: 1190px) {
+                margin-right: 40px;
+            }
+        }
+    }
+}
+
+.social-about {
+    padding: 150px 0;
+    .wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 80px;
+        @media(max-width: 480px) {
+            flex-direction: column;
+            margin-top: 55px;
+        }
+        .item {
+            img {
+                max-width: 240px;
+                width: 100%;
+                height: auto;
+                @media(max-width: 812px) {
+                    max-width: 194px;
+                }
+            }
+        }
+        .item:nth-child(2) {
+            margin: 0 60px;
+            @media(max-width: 480px) {
+                margin: 20px 0;
+            }
+        }
+    }
+}
+
+.about-before_footer {
+    padding-top: 150px;
+    width: 100%;
+    padding-bottom: 20px;
+    @media(max-width: 992px) {
+        padding-top: 120px;
+    }
+    @media(max-width: 480px) {
+        padding-top: 75px;
+    }
+    img {
+        width: 100%;
+        height: auto;
     }
 }
