--- a/styles/index.scss
+++ b/styles/index.scss
@@ -18,6 +18,13 @@ h1, h2, h3, h4, h5, h6 {
 
 .header {
     padding: 40px 0;
+    position: relative;
+    z-index: 9;
+    background: #08080A;
+    width: 100%;
+    @media(max-width: 770px) {
+        padding: 30px 0;
+    }
 }
 
 .overflow-hidden {
@@ -70,7 +77,7 @@ h1, h2, h3, h4, h5, h6 {
     display: block !important;
     z-index: 10;
     position: absolute;
-    top: 42px;
+    top: 32px;
 }
 
 .opened-menu {
@@ -495,6 +502,7 @@ h1 {
             height: 260px;
             border-radius: 50%;
             margin-bottom: 40px;
+            text-decoration: none;
             transition: .3s;
             @media(max-width: 1200px) {
                 max-width: 222px;
