--- a/styles/animations.scss
+++ b/styles/animations.scss
@@ -12,6 +12,31 @@
     }
 }
 
+.opened-menu {
+    animation: .25s ease-in headerAnim;
+}
+
+.header-closed-animation {
+    animation: .5s ease-in headerAnim;
+}
+
+.opened-contact {
+    animation: .5s ease-in headerAnim;
+}
+
+.fixed-header {
+    animation: 1s linear headerAnim;
+}
+
+@keyframes headerAnim {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
 @keyframes animAbout {
     from {
         transform: rotate(0);
